--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,14 @@
-*   {
-    margin: 0%;
-    padding: 0;
+html, body {
+  margin:0;
+  padding:0;
+  height:100%;
+}
+#pagina {
+  position: absolute;
+  min-height: 100%;
+}
+#contenido {
+  padding-bottom:50px; /* este valor debe ser igual o mayor al alto del pie */
 }
 
 .titulo {
@@ -15,10 +23,9 @@
 h2 {
     margin: 0; /* Elimina el margen predeterminado del título */
     font-family: sans-serif;
-    color: azure;
-    box-shadow: 2px 2px 4px #3b3334;
-   
-}
+    color: rgb(240, 255, 255);
+    box-shadow: 2px 2px 4px #d40824;
+    }
 
 .logo {
     display: flex;
@@ -30,9 +37,13 @@ h2 {
     height: auto;
 }
 
+.nav-tabs {
+  color: #000000;
+
+}
+
 body {
     background-color:rgb(241, 238, 220);
-    border: 5px dotted rgb(221, 11, 21);
 }
 
 .barradeaccesos {
@@ -71,13 +82,13 @@ body {
   }
   .menu-content a {
     display: block;
-    color: #000000;
+    color: #e7d7d7;
     padding: 10%
     
   }
   .menu-content a:hover {
     color: #FFFFFF;
-    background-color: #00A4BD;
+    background-color: #bd00a4;
   }
 
     /* Estilos para pantallas pequeñas */
@@ -116,7 +127,7 @@ h2 {
 
 body {
     background-color:rgb(241, 238, 220);
-    border: 5px dotted rgb(221, 11, 21);
+  
 }
 
 .barradeaccesos {
@@ -161,7 +172,7 @@ body {
   }
   .menu-content a:hover {
     color: #FFFFFF;
-    background-color: #00A4BD;
+    background-color: #bd00b4;
   }
 }
 
@@ -202,7 +213,7 @@ h2 {
 
 body {
     background-color:rgb(241, 238, 220);
-    border: 5px dotted rgb(221, 11, 21);
+  
 }
 
 .barradeaccesos {
@@ -247,7 +258,7 @@ body {
   }
   .menu-content a:hover {
     color: #FFFFFF;
-    background-color: #00A4BD;
+    background-color: #bd00b4;
   }
 }
 
@@ -289,7 +300,7 @@ h2 {
 
 body {
     background-color:rgb(241, 238, 220);
-    border: 5px dotted rgb(221, 11, 21);
+    
 }
 
 .barradeaccesos {
@@ -334,7 +345,15 @@ body {
   }
   .menu-content a:hover {
     color: #FFFFFF;
-    background-color: #00A4BD;
+    background-color: #bd007e;
   }
+}
 
+
+footer {
+  height:50px;
+  line-height:50px;
+  bottom:0;
+  left:0;
+  width:100%;
 }
